<resources>
    <string name="app_name">VideoCallingApp</string>

    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="join_button">Join</string>
    <string name="leave_button">Leave</string>
    <string name="send_peer_msg_button">Peer Message</string>
    <string name="send_channel_msg_button">Group Message</string>
    <string name="uid">Enter your User Id</string>
    <string name="msg">Enter your message</string>
    <string name="channel_name">Channel name</string>
    <string name="peer_name">Peer name</string>

    <string name="app_id">9e4d6a7dfcc14c8eb1e2a30ccd996e90</string>
    <string name="token">0069e4d6a7dfcc14c8eb1e2a30ccd996e90IADCy/uTolT6W1AnTVLtdk7uxra/Gvgpzg1ZUHDnBN61ol3ev1kAAAAAIgBg7BQ5UPNWYgQAAQBO81ZiAgBO81ZiAwBO81ZiBABO81Zi</string>
</resources>